Prepared for Release

--- a/app/index.html
+++ b/app/index.html
@@ -23,7 +23,7 @@
     <div ng-controller="M133verwaltungCtrl">
       <md-toolbar md-scroll-shrink ng-controller="TitleCtrl" class="md-whiteframe-5dp titleBar" layout="row">
         <md-button class="md-icon-button menu-button" aria-label="Menu" ng-click="openMenu()">
-          <md-icon md-svg-icon="images/icons/menu55.svg" style="color:white"></md-icon>
+          <md-icon md-svg-icon="icons/menu55.svg" style="color:white"></md-icon>
         </md-button>
         <div class="md-toolbar-tools  md-display-1">
           <h3>
