Add Github Link, Added Copyright

--- a/app/index.html
+++ b/app/index.html
@@ -27,10 +27,12 @@
           <md-icon md-svg-icon="icons/menu55.svg" style="color:white"></md-icon>
         </md-button>
         <div class="md-toolbar-tools  md-display-1">
-          <h3>
+          <h3 flex>
             <span>{{title}}  <span ng-show="selectedClass"> > {{selectedClass.Name}}</span></span>
           </h3>
-          
+          <a href="https://github.com/BrunnerLivio/M133-Verwaltung">
+            <md-icon md-svg-icon="icons/github10.svg" style="color:white"></md-icon>
+          </a>
         </div>
         
       </md-toolbar>
