Added Text wrapping

--- a/app/index.html
+++ b/app/index.html
@@ -31,7 +31,7 @@
             <span>{{title}}  <span ng-show="selectedClass"> > {{selectedClass.Name}}</span></span>
           </h3>
           <a href="https://github.com/BrunnerLivio/M133-Verwaltung">
-            <md-icon md-svg-icon="icons/github10.svg" style="color:white"></md-icon>
+            <md-icon md-svg-icon="icons/github10.svg" class="github"></md-icon>
           </a>
         </div>
         
