--- a/app/index.html
+++ b/app/index.html
@@ -28,7 +28,7 @@
         </md-button>
         <div class="md-toolbar-tools  md-display-1">
           <h3 flex>
-            <span>{{title}}  <span ng-show="selectedClass"> > {{selectedClass.Name}}</span></span>
+            <span>{{title}}  <span ng-show="subtitle"> > {{subtitle}}</span></span>
           </h3>
           <a href="https://github.com/BrunnerLivio/M133-Verwaltung">
             <md-button>
@@ -86,6 +86,7 @@
         <script src="scripts/controllers/newproject.js"></script>
         <script src="scripts/services/m133verwaltungservice.js"></script>
         <script src="scripts/services/http.js"></script>
+        <script src="scripts/controllers/login.js"></script>
         <!-- endbuild -->
 </body>
 </html>
