--- a/app/index.html
+++ b/app/index.html
@@ -17,7 +17,7 @@
     <!-- endbuild -->
     <base href="/">
   </head>
-  <body ng-app="m133VerwaltungApp">
+  <body ng-app="m133VerwaltungApp" layout="column">
     <!--[if lte IE 8]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
